syntax = "proto3";

// option go_package = "github.com/dinhlq03/examples-grpc/protos/bookshop";
// package books;
package user_service;

option go_package = "./;user_service";

message Book {
  string title = 1;
  string author = 2;
  int32 page_count = 3;
}

message GetBookListRequest {}
message GetBookListResponse { repeated Book books = 1; }

service Inventory {
  rpc GetBookList(GetBookListRequest) returns (GetBookListResponse) {}
}